--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
             "homepage": "https://github.com.br/Alanjoose"
         }
     ],
-    "minimum-stability": "alpha",
+    "minimum-stability": "stable",
     "require": {
         "php": ">=8.3",
         "ext-pdo": "*"
